--- a/client/package.json
+++ b/client/package.json
@@ -14,20 +14,71 @@
   "description": "",
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-context-menu": "^2.1.4",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-hover-card": "^1.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.3",
+    "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@tanstack/react-query": "^5.83.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^10.16.1",
+    "input-otp": "^1.2.4",
+    "jsbarcode": "^3.11.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.31",
     "lucide-react": "^0.525.0",
+    "next-themes": "^0.2.1",
+    "qrcode": "^1.5.3",
     "react": "^19.1.0",
+    "react-day-picker": "^8.8.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-icons": "^4.10.1",
+    "react-resizable-panels": "^0.0.55",
+    "recharts": "^2.7.2",
     "tailwind-merge": "^3.3.1",
     "typescript": "^5.8.3",
+    "vaul": "^0.7.0",
     "vite": "^7.0.4",
     "wouter": "^3.7.1",
     "zod": "^4.0.5"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^20.5.0",
+    "@types/qrcode": "^1.5.2",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.6"
   }
 }
