--- a/client/package.json
+++ b/client/package.json
@@ -70,15 +70,15 @@
     "vaul": "^0.7.0",
     "vite": "^7.0.4",
     "wouter": "^3.7.1",
-    "zod": "^4.0.5"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^20.5.0",
-    "@types/qrcode": "^1.5.2",
+    "zod": "^4.0.5",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.6"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^20.5.0",
+    "@types/qrcode": "^1.5.2"
   }
 }
