--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "cd client && npm install --legacy-peer-deps && npm run build && cd .. && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "cd client && npm install --legacy-peer-deps && npm run build && cd .. && esbuild server/index.ts --platform=node --packages=external --external:vite --external:@vitejs/plugin-react --external:autoprefixer --external:postcss --external:tailwindcss --external:@tailwindcss/typography --external:@tailwindcss/vite --external:@replit/vite-plugin-cartographer --external:@replit/vite-plugin-runtime-error-modal --bundle --format=esm --outdir=dist",
     "build:client": "cd client && npm install --legacy-peer-deps && npm run build",
-    "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build:server": "esbuild server/index.ts --platform=node --packages=external --external:vite --external:@vitejs/plugin-react --external:autoprefixer --external:postcss --external:tailwindcss --external:@tailwindcss/typography --external:@tailwindcss/vite --external:@replit/vite-plugin-cartographer --external:@replit/vite-plugin-runtime-error-modal --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "start:dev": "npm run build:client && NODE_ENV=development tsx server/index.ts",
     "check": "tsc",
